# pfvtr_ros2

./: CMakeLists.txt  README.md  package.xml  tmux_startup_helhest.sh  tmux_startup_taros.sh
action/: MapMaker.action
launch/: .sim_gui.launch.py.swp  gui.launch.py  hellhest-jr.launch.py  robot_template.launch.py  sim.launch.py  sim_gui.launch.py
msg/: Features.msg  FeaturesList.msg  SensorsInputImages.msg  SensorsOutput.msg
src/controller/: controller-ros-2.py  controller.py
src/master/: mapmaker-ros-2.py  repeater-ros-2.py  vtr_gui.py
src/pfvtr/action/: MapRepeater.action
src/pfvtr/msg/: SensorsInput.msg
src/pfvtr/src/controller/: controller.py
src/pfvtr/src/master/: repeater-ros-2.py
src/pfvtr/src/sensors/: sensors-ros-2.py
src/sensors/: base_classes.py  representations-ros-2.py  sensor_processing.py  sensors-ros-2.py
src/sensors/backends/crosscorrelation/: crosscorr.py
src/sensors/backends/nn_policy/: model.py
src/sensors/backends/odometry/: odom_dist.py
src/sensors/backends/siamese/: siam_model.py  siamese.py  siamfeature.py
srv/: GetMaps.srv
